update new video

--- a/vlog.html
+++ b/vlog.html
@@ -22,7 +22,18 @@
 			<!-- <h1 class="display-4">骑行视频记录</h1> -->
 			<h4 class="">记录美好景致，分享愉快经历</h4>
 			<hr class="my-4">
-			<p>由于不会压制视频，微信分享大文件会被压缩成渣，只好放在这里，可下载，不定期更新。</p>
+			<p>由于微信分享视频会被压缩成渣，只好放在这里，可下载，不定期更新。</p>
+		</div>
+
+		<div class="card mb-3">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/dongyou2_cover.jpg">
+				<source src="http://i.dongde.com/videos/dongyou2.mp4" type="video/mp4">
+			</video>
+			<div class="card-body">
+				<h5 class="card-title">东游记 Part II</h5>
+				<p class="card-text">见到大海了，在沙滩上打个滚，在海水里噗通几下，尝到了海水的味道，感觉不苦，和食盐味道一样。没看到泳装妹妹有些失望，还有就是离北京越远，风景越好，饭店的饭菜越好吃。</p>
+				<p class="card-text"><small class="text-muted">2019.09.14</small> <a class="btn btn-light" href="http://i.dongde.com/videos/dongyou2.mp4" role="button">Download</a></p>
+			</div>
 		</div>
 
 		<div class="card mb-3">
@@ -75,7 +86,7 @@
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">阳光灿烂周六游</h5>
-				<p class="card-text">琉璃庙-汤河口-百里画廊-四海</p>
+				<p class="card-text">琉璃庙-汤河口-百里画廊-四海，很漂亮的一次骑行，期待下一次相聚。</p>
 				<p class="card-text"><small class="text-muted">2019.06.29</small> <a class="btn btn-light" href="http://i.dongde.com/videos/sunnysaturdayriding.mp4" role="button">Download</a></p>
 			</div>
 		</div>
@@ -86,7 +97,7 @@
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">官厅水库</h5>
-				<p class="card-text">上了高速，就慢不下来</p>
+				<p class="card-text">上了高速，就慢不下来，新手也不例外。</p>
 				<p class="card-text"><small class="text-muted">2019.06.23</small> <a class="btn btn-light" href="http://i.dongde.com/videos/weekendwind.mp4" role="button">Download</a></p>
 			</div>
 		</div>
@@ -97,7 +108,7 @@
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">漫游十三陵</h5>
-				<p class="card-text">住在城北，想休闲跑，就这条路了。</p>
+				<p class="card-text">住在城北，想休闲跑，就这条路了。虽然跑了很多次，也不感到厌倦。</p>
 				<p class="card-text"><small class="text-muted">2019.06.08</small> <a class="btn btn-light" href="http://i.dongde.com/videos/oneride.mp4" role="button">Download</a></p>
 			</div>
 		</div>
@@ -141,7 +152,7 @@
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">妙峰山好声音</h5>
-				<p class="card-text">喝彩是路人，没有一个给钱的。</p>
+				<p class="card-text">喝彩的是路人，没有一个给钱的。</p>
 				<p class="card-text"><small class="text-muted">2018.10.02</small> <a class="btn btn-light" href="http://i.dongde.com/videos/miaofengshan.mov" role="button">Download</a></p>
 			</div>
 		</div>
