--- a/vlog.html
+++ b/vlog.html
@@ -26,6 +26,17 @@
 		</div>
 
 		<div class="card mb-3">
+			<video controls class="card-img-top" poster="http://i.dongde.com/videos/bridge_cover.jpg">
+				<source src="http://i.dongde.com/videos/bridge.mp4" type="video/mp4">
+			</video>
+			<div class="card-body">
+				<h5 class="card-title">黃花水長城</h5>
+				<p class="card-text">有山有水有长城，比八达岭那挤破头皮的地方好多了。景区不大，没走多久就到大门口了，人造景观太多，门票要60块。这时候去可以捡栗子，多捡点把门票钱捡回来。</p>
+				<p class="card-text"><small class="text-muted">2019.09.22</small> <a class="btn btn-light" href="http://i.dongde.com/videos/bridge.mp4" role="button">Download</a></p>
+			</div>
+		</div>
+
+		<div class="card mb-3">
 			<video controls class="card-img-top" poster="http://i.dongde.com/videos/dongyou2_cover.jpg">
 				<source src="http://i.dongde.com/videos/dongyou2.mp4" type="video/mp4">
 			</video>
