add more detail

--- a/resume.html
+++ b/resume.html
@@ -53,8 +53,9 @@
 				<div class="section" id="objectives">
 					<h3>Objectives</h3>
 					<ul>
+						<li><span class="arrow_triangle-right"></span> 计算机软件，互联网/电子商务</li>
 						<li><span class="arrow_triangle-right"></span> 前后端程序，Android/iOS移动开发</li>
-						<li><span class="arrow_triangle-right"></span> 网站前端，设计制作，网站维护</li>
+						<li><span class="arrow_triangle-right"></span> 网站设计/开发，网络运营维护</li>
 					</ul>
 				</div>
 				<div class="section" id="expertise">
@@ -98,7 +99,7 @@
 							<div class="position">
 								<p><b>北京圈网互联科技有限公司</b> <a href="http://www.niwota.com" target="_blank" rel="nofollow" class="arrow_right-up"> </a></p>
 								<p class="title"><i>网页设计 · 网站前端 · 页游制作</i></p>
-								<p>社交网站，网页设计/制作，前端脚本，页游: CSS HTML / Javascript jQuery / Flash Actionscript</p>
+								<p>社交网站，网页设计/制作，前端脚本，页游: CSS HTML / Javascript jQuery / Flash AS</p>
 							</div>
 						</li>
 						<li>
@@ -118,7 +119,7 @@
 							<div class="position">
 								<p><b>光辉互动科技有限公司</b></p>
 								<p class="title"><i>前端开发</i></p>
-								<p>手机游戏<a href="#">&lt;乱斗女皇&gt;</a>前端脚本，网站运营管理后台: Cocos2D-X / Lua</p>
+								<p>手游<a href="#">&lt;乱斗女皇&gt;</a>前端开发，负责模块级逻辑结构设计、开发、交付。按照功能组件的详细设计，对工程进行测试，修复Bug。参与新知识的学习和培训: Cocos2D-Lua / Java</p>
 							</div>
 						</li>
 						<li class="last">
@@ -128,7 +129,7 @@
 							<div class="position">
 								<p><b>北京迅盈富电子科技有限公司</b></p>
 								<p class="title"><i>前端开发 · 网站设计 · 视频剪辑</i></p>
-								<p>棋牌手游前端脚本，微信小程序/小游戏: Cocos2D-X / Lua / JavaScript</p>
+								<p>棋牌手游前端开发：负责聊天和群组功能的开发测试。微信小程序/小游戏：独立负责小游戏的设计、开发、测试并上线运营。Cocos2D-Lua / Cocos Creator / JavaScript</p>
 							</div>
 						</li>
 					</ol>
@@ -143,7 +144,7 @@
 							<div class="position">
 								<p><b>辽宁中医药大学</b></p>
 								<p class="title"><i>中药学英语，本科</i></p>
-								<p>中药学，英语，药理，分析，化学</p>
+								<p>中药学 · 英语 · 药理 · 分析 · 化学</p>
 							</div>
 						</li>
 						<!-- <li class="last">
@@ -162,7 +163,7 @@
 					<h3><span class="icon_tools"></span> Skills &amp; Technologies</h3>
 					<ul class="skills">
 						<li> <span class="skill">OC/C++</span> <span class="text"></span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:40%;"><em>2/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
-						<li> <span class="skill">Cocos2D-X/Lua</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
+						<li> <span class="skill">Cocos2D-Lua</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 						<li> <span class="skill">JavaScript/jQuery</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>3/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 						<li> <span class="skill">PHP/MySQL</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:50%;"><em>2.5/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 						<li> <span class="skill">CSS/HTML5</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
@@ -173,7 +174,7 @@
 						<li> <span class="skill">Cocos Creator</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 					</ul>
 				</div>
-				<p class="page-footer">2019.10.23</p>
+				<p class="page-footer">2019.10.24</p>
 			</div>
 		</div>
 	</div>
