--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
 					<h3>Objectives</h3>
 					<ul>
 						<li><span class="arrow_triangle-right"></span> 计算机软件，互联网/电子商务</li>
-						<li><span class="arrow_triangle-right"></span> 前后端程序，Android/iOS移动开发</li>
+						<li><span class="arrow_triangle-right"></span> 前后端程序，Android/iOS软件开发</li>
 						<li><span class="arrow_triangle-right"></span> 网站设计/开发，网络运营维护</li>
 					</ul>
 				</div>
