http over SSL - Let’s Encrypt

--- a/vlog.html
+++ b/vlog.html
@@ -26,156 +26,156 @@
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/coffee_cover.jpg">
-				<source src="http://i.dongde.com/videos/coffee.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/coffee_cover.jpg">
+				<source src="https://i.dongde.com/videos/coffee.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">薰衣草咖啡</h5>
 				<p class="card-text">本來沒打算去，可是閒著也是在家宅一天。市內空氣也不好，不如去郊區轉轉，距離也剛好。</p>
-				<p class="card-text"><small class="text-muted">2019.09.28</small> <a class="btn btn-light" href="http://i.dongde.com/videos/coffee.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.09.28</small> <a class="btn btn-light" href="https://i.dongde.com/videos/coffee.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/bridge_cover.jpg">
-				<source src="http://i.dongde.com/videos/bridge.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/bridge_cover.jpg">
+				<source src="https://i.dongde.com/videos/bridge.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">黃花水長城</h5>
 				<p class="card-text">有山有水有长城，比八达岭那挤破头皮的地方好多了。景区不大，没走多久就到大门口了，人造景观太多，门票要60块。这时候去可以捡栗子，多捡点把门票钱捡回来。</p>
-				<p class="card-text"><small class="text-muted">2019.09.22</small> <a class="btn btn-light" href="http://i.dongde.com/videos/bridge.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.09.22</small> <a class="btn btn-light" href="https://i.dongde.com/videos/bridge.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/dongyou2_cover.jpg">
-				<source src="http://i.dongde.com/videos/dongyou2.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/dongyou2_cover.jpg">
+				<source src="https://i.dongde.com/videos/dongyou2.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">东游记 Part II</h5>
 				<p class="card-text">见到大海了，在沙滩上打个滚，在海水里噗通几下，尝到了海水的味道，感觉不苦，和食盐味道一样。没看到泳装妹妹有些失望，还有就是离北京越远，风景越好，饭店的饭菜越好吃。</p>
-				<p class="card-text"><small class="text-muted">2019.09.14</small> <a class="btn btn-light" href="http://i.dongde.com/videos/dongyou2.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.09.14</small> <a class="btn btn-light" href="https://i.dongde.com/videos/dongyou2.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/dongyou1_cover.jpg">
-				<source src="http://i.dongde.com/videos/dongyou1.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/dongyou1_cover.jpg">
+				<source src="https://i.dongde.com/videos/dongyou1.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">东游记 Part I</h5>
 				<p class="card-text">你问我要去向何方，我指着大海的方向。</p>
-				<p class="card-text"><small class="text-muted">2019.09.13</small> <a class="btn btn-light" href="http://i.dongde.com/videos/dongyou1.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.09.13</small> <a class="btn btn-light" href="https://i.dongde.com/videos/dongyou1.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/miyun_cover.jpg">
-				<source src="http://i.dongde.com/videos/miyun.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/miyun_cover.jpg">
+				<source src="https://i.dongde.com/videos/miyun.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">密云琉辛路</h5>
 				<p class="card-text">说好的早点起，没有；说好的休闲骑，也没有。</p>
-				<p class="card-text"><small class="text-muted">2019.09.08</small> <a class="btn btn-light" href="http://i.dongde.com/videos/miyun.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.09.08</small> <a class="btn btn-light" href="https://i.dongde.com/videos/miyun.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/motoswag_cover.jpg">
-				<source src="http://i.dongde.com/videos/motoswag.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/motoswag_cover.jpg">
+				<source src="https://i.dongde.com/videos/motoswag.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">155天下第一</h5>
 				<p class="card-text">Gixxer 155 - Best motorcycle ever. Video editing for fun. 也是闲的</p>
-				<p class="card-text"><small class="text-muted">2019.09.07</small> <a class="btn btn-light" href="http://i.dongde.com/videos/motoswag.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.09.07</small> <a class="btn btn-light" href="https://i.dongde.com/videos/motoswag.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/sunday_cover.jpg">
-				<source src="http://i.dongde.com/videos/sunday.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/sunday_cover.jpg">
+				<source src="https://i.dongde.com/videos/sunday.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">再走范崎路</h5>
 				<p class="card-text">难得这么好的太阳，虽然前一天也出来了，还是忍不住。</p>
-				<p class="card-text"><small class="text-muted">2019.07.14</small> <a class="btn btn-light" href="http://i.dongde.com/videos/sunday.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.07.14</small> <a class="btn btn-light" href="https://i.dongde.com/videos/sunday.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/sunnysaturdayriding_cover.jpg">
-				<source src="http://i.dongde.com/videos/sunnysaturdayriding.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/sunnysaturdayriding_cover.jpg">
+				<source src="https://i.dongde.com/videos/sunnysaturdayriding.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">阳光灿烂周六游</h5>
 				<p class="card-text">琉璃庙-汤河口-百里画廊-四海，很漂亮的一次骑行，期待下一次相聚。</p>
-				<p class="card-text"><small class="text-muted">2019.06.29</small> <a class="btn btn-light" href="http://i.dongde.com/videos/sunnysaturdayriding.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.06.29</small> <a class="btn btn-light" href="https://i.dongde.com/videos/sunnysaturdayriding.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/weekendwind_cover.jpg">
-				<source src="http://i.dongde.com/videos/weekendwind.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/weekendwind_cover.jpg">
+				<source src="https://i.dongde.com/videos/weekendwind.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">官厅水库</h5>
 				<p class="card-text">上了高速，就慢不下来，新手也不例外。</p>
-				<p class="card-text"><small class="text-muted">2019.06.23</small> <a class="btn btn-light" href="http://i.dongde.com/videos/weekendwind.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.06.23</small> <a class="btn btn-light" href="https://i.dongde.com/videos/weekendwind.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/oneride_cover.jpg">
-				<source src="http://i.dongde.com/videos/oneride.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/oneride_cover.jpg">
+				<source src="https://i.dongde.com/videos/oneride.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">漫游十三陵</h5>
 				<p class="card-text">住在城北，想休闲跑，就这条路了。虽然跑了很多次，也不感到厌倦。</p>
-				<p class="card-text"><small class="text-muted">2019.06.08</small> <a class="btn btn-light" href="http://i.dongde.com/videos/oneride.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2019.06.08</small> <a class="btn btn-light" href="https://i.dongde.com/videos/oneride.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/weilai_cover.jpg">
-				<source src="http://i.dongde.com/videos/weilai.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/weilai_cover.jpg">
+				<source src="https://i.dongde.com/videos/weilai.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">未来科技城大桥</h5>
 				<p class="card-text">夜里骑车有不一样的感觉</p>
-				<p class="card-text"><small class="text-muted">2018.10.30</small> <a class="btn btn-light" href="http://i.dongde.com/videos/weilai.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2018.10.30</small> <a class="btn btn-light" href="https://i.dongde.com/videos/weilai.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/fanqilu2_cover.jpg">
-				<source src="http://i.dongde.com/videos/fanqilu2.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/fanqilu2_cover.jpg">
+				<source src="https://i.dongde.com/videos/fanqilu2.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">范崎路漂移</h5>
 				<p class="card-text">我就静静地跟在后面，看他俩压弯。</p>
-				<p class="card-text"><small class="text-muted">2018.10.14</small> <a class="btn btn-light" href="http://i.dongde.com/videos/fanqilu2.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2018.10.14</small> <a class="btn btn-light" href="https://i.dongde.com/videos/fanqilu2.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/fanqilu_cover.jpg">
-				<source src="http://i.dongde.com/videos/fanqilu.mp4" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/fanqilu_cover.jpg">
+				<source src="https://i.dongde.com/videos/fanqilu.mp4" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">范崎路三岔口</h5>
 				<p class="card-text">一个人，走到哪里算哪里。遇到一队DUKE390车队，好酷。</p>
-				<p class="card-text"><small class="text-muted">2018.10.07</small> <a class="btn btn-light" href="http://i.dongde.com/videos/fanqilu.mp4" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2018.10.07</small> <a class="btn btn-light" href="https://i.dongde.com/videos/fanqilu.mp4" role="button">Download</a></p>
 			</div>
 		</div>
 
 		<div class="card mb-3">
-			<video controls class="card-img-top" poster="http://i.dongde.com/videos/miaofengshan_cover.jpg">
-				<source src="http://i.dongde.com/videos/miaofengshan.mov" type="video/mp4">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/miaofengshan_cover.jpg">
+				<source src="https://i.dongde.com/videos/miaofengshan.mov" type="video/mp4">
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">妙峰山好声音</h5>
 				<p class="card-text">喝彩的是路人，没有一个给钱的。</p>
-				<p class="card-text"><small class="text-muted">2018.10.02</small> <a class="btn btn-light" href="http://i.dongde.com/videos/miaofengshan.mov" role="button">Download</a></p>
+				<p class="card-text"><small class="text-muted">2018.10.02</small> <a class="btn btn-light" href="https://i.dongde.com/videos/miaofengshan.mov" role="button">Download</a></p>
 			</div>
 		</div>
 
