--- a/clock.html
+++ b/clock.html
@@ -64,9 +64,8 @@
 		#container {
 			border: 1px solid #ddd;
 			border-radius: 1em;
-			padding: 4em 3em;
-			margin: 0 auto;
-			min-width: 320px;
+			padding: 2em 1em;
+			margin: 1em 1em;
 			background: #f1f1f1;
 		}
 		section h2 {
@@ -79,8 +78,8 @@
 		.clock {
 			font-family: Roboto, sans-serif;
 			font-weight: 400;
-			font-size: 1200%;
-			line-height: 1.4;
+			font-size: 22vw;
+			line-height: 1.25;
 			color: #666;
 			text-align: center;
 		}
