--- a/vlog.html
+++ b/vlog.html
@@ -13,16 +13,28 @@
 			background: #666;
 		}
 	</style>
-	<title>Motorcycle Ride Videos - 北京缘聚 MOTOCLUB</title>
+	<title>Motorcycle Riding - 北京缘聚 MOTOCLUB</title>
 	<!-- 北京缘聚摩友群 -->
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="jumbotron">
 			<!-- <h1 class="display-4">骑行视频记录</h1> -->
-			<h4 class="">记录美好景致，分享愉快经历</h4>
+			<h4 class="">骑行日记</h4>
 			<hr class="my-4">
-			<p>由于微信分享视频会被压缩成渣，只好放在这里，可下载，不定期更新。</p>
+			<!-- <p>由于微信分享视频会被压缩成渣，只好放在这里，可下载，不定期更新。</p> -->
+			<p>记录美好景致，分享愉快经历</p>
+		</div>
+
+		<div class="card mb-3">
+			<video controls class="card-img-top" poster="https://i.dongde.com/videos/touqi_cover.jpg">
+				<source src="https://i.dongde.com/videos/touqi.mp4" type="video/mp4">
+			</video>
+			<div class="card-body">
+				<h5 class="card-title">出门透气</h5>
+				<p class="card-text">疫情肆虐两个月了，全国到处都封了，小区每天进出都测量体温，一天只能出去一次购买生活用品。上班时间也遥遥无期，每天在家都要长毛了。昨夜刮了一夜的风，今天万里晴空，借着出门买菜的机会，骑车去附近转转晒晒太阳，呼吸一下新鲜空气。</p>
+				<p class="card-text"><small class="text-muted">2020.02.22</small> <a class="btn btn-light" href="https://i.dongde.com/videos/touqi.mp4" role="button">Download</a></p>
+			</div>
 		</div>
 
 		<div class="card mb-3">
