--- a/vlog.html
+++ b/vlog.html
@@ -19,8 +19,7 @@
 <body>
 	<div class="container-fluid">
 		<div class="jumbotron">
-			<!-- <h1 class="display-4">骑行视频记录</h1> -->
-			<h4 class="">骑行日记</h4>
+			<h1 class="display-4">骑行日记</h1>
 			<hr class="my-4">
 			<!-- <p>由于微信分享视频会被压缩成渣，只好放在这里，可下载，不定期更新。</p> -->
 			<p>记录美好景致，分享愉快经历</p>
@@ -32,7 +31,7 @@
 			</video>
 			<div class="card-body">
 				<h5 class="card-title">出门透气</h5>
-				<p class="card-text">疫情肆虐两个月了，全国到处都封了，小区每天进出都测量体温，一天只能出去一次购买生活用品。上班时间也遥遥无期，每天在家都要长毛了。昨夜刮了一夜的风，今天万里晴空，借着出门买菜的机会，骑车去附近转转晒晒太阳，呼吸一下新鲜空气。</p>
+				<p class="card-text">疫情肆虐两个月了，全国到处都封了，小区每天进出都测量体温，一天只能出去一次购买生活用品。上班时间也遥遥无期，每天在家都要长毛了。昨夜刮了一夜的风，今天万里晴空，借着出门买菜的机会，骑车去附近转转，呼吸一下新鲜空气。</p>
 				<p class="card-text"><small class="text-muted">2020.02.22</small> <a class="btn btn-light" href="https://i.dongde.com/videos/touqi.mp4" role="button">Download</a></p>
 			</div>
 		</div>
