update the copy date

--- a/vlog.html
+++ b/vlog.html
@@ -193,7 +193,7 @@
 	</div>
 
 	<footer class="text-center">
-		<p>&copy2019， 北京缘聚 MOTOCLUB</p>
+		<p>&copy2020 北京缘聚 MOTOCLUB</p>
 	</footer>
 
 	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
