--- a/vlog.html
+++ b/vlog.html
@@ -204,7 +204,7 @@
 	</div>
 
 	<footer class="text-center">
-		<p>&copy2019， 北京缘聚 MOTOCLUB</p>
+		<p>&copy;2020 北京缘聚 MOTOCLUB</p>
 	</footer>
 
 </body>
