modify some info

--- a/resume.html
+++ b/resume.html
@@ -53,14 +53,13 @@
 				<div class="section" id="objectives">
 					<h3>Objectives</h3>
 					<ul>
-						<li><span class="arrow_triangle-right"></span> 计算机软件，互联网/电子商务</li>
-						<li><span class="arrow_triangle-right"></span> 前后端程序，Android/iOS软件开发</li>
-						<li><span class="arrow_triangle-right"></span> 网站设计/开发，网络运营维护</li>
+						<li><span class="arrow_triangle-right"></span> 网站前端，HTML5</li>
+						<li><span class="arrow_triangle-right"></span> 前端程序，游戏前端</li>
 					</ul>
 				</div>
 				<div class="section" id="expertise">
 					<h3>Expertise</h3>
-					<p>从事网站设计编程维护多年，掌握 CSS3 / HTML5 / Javascript 技术， 熟悉响应式 Web 设计。熟悉主流操作 系统和 各种浏览器 (IE, Firefox, Opera, Chrome 等)，针对移动端优化 网站和兼容性测试。曾做过产品文档和 规范化的工作。iPhone / Mac 老用户 ，喜欢钻研新技术，能较根据工作需求 ，调整自己的方向。</p>
+					<p>从事网站设计编程维护多年，掌握 CSS3 / HTML5，熟悉响应式 Web 设计。了解 JQuery / AngularJS / Three.js / Vue 等。用过 Windows / Linux / Mac 等系统，针对移动端优化网站和兼容性测试。曾做过 Cocos Creator 小游戏的独立开发。iPhone / Mac 老用户，喜欢钻研新技术，能较根据工作需求，调整自己的方向。</p>
 				</div>
 				<div class="section" id="languages">
 					<h3>Languages</h3>
@@ -98,8 +97,8 @@
 							</div>
 							<div class="position">
 								<p><b>北京圈网互联科技有限公司</b> <a href="http://www.niwota.com" target="_blank" rel="nofollow" class="arrow_right-up"> </a></p>
-								<p class="title"><i>网页设计 · 网站前端 · 页游制作</i></p>
-								<p>社交网站，网页设计/制作，前端脚本，页游: CSS HTML / Javascript jQuery / Flash AS</p>
+								<p class="title"><i>网站前端</i></p>
+								<p>社交网站，网站设计，制作／后端编程CSS HTML / JavsScript / Flash</p>
 							</div>
 						</li>
 						<li>
@@ -109,7 +108,7 @@
 							<div class="position">
 								<p><b>北京奇遇星空科技有限公司</b></p>
 								<p class="title"><i>前端制作</i></p>
-								<p>手机游戏<a href="#">&lt;进击海贼王&gt;</a>, <a href="#">&lt;少女联萌&gt;</a>前端制作，骨骼动画处理，资源优化: Flash / DragonBones / CocoStudio</p>
+								<p>少女联萌前端制作，骨骼动画处理，资源优化Flash / DragonBones / CocoStudio</p>
 							</div>
 						</li>
 						<li>
@@ -119,7 +118,7 @@
 							<div class="position">
 								<p><b>光辉互动科技有限公司</b></p>
 								<p class="title"><i>前端开发</i></p>
-								<p>手游<a href="#">&lt;乱斗女皇&gt;</a>前端开发，负责模块级逻辑结构设计、开发、交付。按照功能组件的详细设计，对工程进行测试，修复Bug。参与新知识的学习和培训: Cocos2D-Lua / Java</p>
+								<p>乱斗女皇前端脚本，网站运营管理后台Cocos-Lua / Java</p>
 							</div>
 						</li>
 						<li class="last">
@@ -128,8 +127,8 @@
 							</div>
 							<div class="position">
 								<p><b>北京迅盈富电子科技有限公司</b></p>
-								<p class="title"><i>前端开发 · 网站设计 · 视频剪辑</i></p>
-								<p>棋牌手游前端开发：负责聊天和群组功能的开发测试。微信小程序/小游戏：独立负责小游戏的设计、开发、测试并上线运营。Cocos2D-Lua / Cocos Creator / JavaScript</p>
+								<p class="title"><i>前端开发 · 网站设计</i></p>
+								<p>棋牌手游前端脚本，微信小程序/小游戏Cocos-Lua / Cocos Creator / JavaScript</p>
 							</div>
 						</li>
 					</ol>
@@ -163,18 +162,18 @@
 					<h3><span class="icon_tools"></span> Skills &amp; Technologies</h3>
 					<ul class="skills">
 						<li> <span class="skill">OC/C++</span> <span class="text"></span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:40%;"><em>2/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
-						<li> <span class="skill">Cocos2D-Lua</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
-						<li> <span class="skill">JavaScript/jQuery</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>3/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
+						<li> <span class="skill">CocosCreator</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
+						<li> <span class="skill">Java/C#</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:60%;"><em>3/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 						<li> <span class="skill">PHP/MySQL</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:50%;"><em>2.5/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
-						<li> <span class="skill">CSS/HTML5</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
+						<li> <span class="skill">CSS/HTML5</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:90%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 						<li> <span class="skill">Photoshop</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 						<li> <span class="skill">Illustrator</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:60%;"><em>3/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
-						<li> <span class="skill">Flash/AS</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:70%;"><em>3.5/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
+						<li> <span class="skill">Bash/Git</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:60%;"><em>3.5/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 						<li> <span class="skill">Git/SVN</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:70%;"><em>3.5/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
-						<li> <span class="skill">Cocos Creator</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:80%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
+						<li> <span class="skill">Unity</span> <span class="star-rating inline-rating small-star"><i class="current-rating" style="width:60%;"><em>4/5</em> <b></b><b></b><b></b><b></b><b></b></i><i class="one-star"></i><i class="two-stars"></i><i class="three-stars"></i><i class="four-stars"></i><i class="five-stars"></i></span> </li>
 					</ul>
 				</div>
-				<p class="page-footer">2019.10.24</p>
+				<p class="page-footer">2021.04.21</p>
 			</div>
 		</div>
 	</div>
