--- a/vlog.html
+++ b/vlog.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
 	<style>
 		.container, .container-fluid {
 			max-width: 1140px;
@@ -17,7 +18,7 @@
 	<!-- 北京缘聚摩友群 -->
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		<div class="jumbotron">
 			<h1 class="display-4">骑行日记</h1>
 			<hr class="my-4">
@@ -204,7 +205,7 @@
 	</div>
 
 	<footer class="text-center">
-		<p>&copy;2020 北京缘聚 MOTOCLUB</p>
+		<p>&copy;2021 北京缘聚 MOTOCLUB</p>
 	</footer>
 
 </body>
