--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li><span class="icon_genius"> </span><a href="https://github.com/qifei" rel="nofollow">Git repositories</a><i></i></li>
     </ul>
   </div>
-  <div id="footer">&copy; 2017 most rights reserved.</div>
+  <div id="footer">&copy; 2022 some rights reserved.</div>
   <div id="updateOldBrowser">
     <h2>这个浏览器太老了</h2>
     <p>为了更佳的浏览体验和安全考量，请更新你的浏览器。 <a href="https://www.mozilla.org/en-US/firefox/all/" rel="nofollow" target="_blank" onclick="dismissWarning();">FireFox</a> , <a href="https://www.opera.com/" rel="nofollow" target="_blank" onclick="dismissWarning();">Opera</a> , <a href="https://www.google.com/chrome/" rel="nofollow" target="_blank" onclick="dismissWarning();">Chrome</a> , <a href="https://browser-update.org/zh/update.html?force_outdated=true" rel="nofollow" target="_blank" onclick="dismissWarning();">更多...</a></p>
