--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><span class="social_twitter"></span> <a href="http://www.twitter.com/" rel="nofollow">Twitter tweets</a><i></i></li>
       <li><span class="social_wordpress"></span> <a href="http://qifei.wordpress.com/" rel="nofollow">WordPress blog</a><i></i></li>
       <li><span class="icon_camera_alt"></span> <a href="http://www.flickr.com/" rel="nofollow">Flickr photos</a><i></i></li>
-      <li><span class="icon_genius"> </span><a href="https://github.com/qifei" rel="nofollow">Git repositories</a><i></i></li>
+      <li><span class="icon_film"></span> <a href="vlog.html" rel="nofollow">Videos</a><i></i></li>
     </ul>
   </div>
   <div id="footer">&copy; 2022 some rights reserved.</div>
