try fix the errors

--- a/cc/index.html
+++ b/cc/index.html
@@ -20,7 +20,7 @@
       <nav class="navbar navbar-dark bg-primary" id="site-nav">
         <a class="navbar-brand" href="">
           <picture>
-            <source srcset="assets/cc-logo.svg" type="image/svg+xml">
+            <source srcset="./assets/cc-logo.svg" type="image/svg+xml">
             <img src="./assets/cc-logo.png" width="30" height="30" alt="Block-Chain">
           </picture>
           <span class="brand-name">牛币ABC</span>
@@ -444,8 +444,8 @@
   
 
   <!-- Optional JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
   <script src="./assets/clipboard.min.js" crossorigin="anonymous"></script>
   <script type="text/javascript">
 
