--- a/reb/index.html
+++ b/reb/index.html
@@ -8,9 +8,10 @@
     <title>瑞柏思生物医药 - Home</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/style.css">
+    <!-- <link rel="stylesheet" href="./assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body class="home-page">
     <a id="skippy" class="sr-only sr-only-focusable" href="#content">
@@ -193,9 +194,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="assets/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/popper.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
       var wrap = $(window);
       var header = $("#site-header");
