--- a/yc/index.html
+++ b/yc/index.html
@@ -356,9 +356,9 @@
   
 
   <!-- Optional JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js" crossorigin="anonymous"></script>
   <script src="./assets/jQuery.Marquee/jquery.marquee.min.js" crossorigin="anonymous"></script>
   <script type="text/javascript">
     $(function () {
