--- a/reb/company.html
+++ b/reb/company.html
@@ -8,7 +8,7 @@
     <title>企业介绍 - 瑞柏思生物医药</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
@@ -22,7 +22,7 @@
       <header>
         <nav class="navbar navbar-light container" id="logobar">
           <a class="navbar-brand" href="./index.html">
-            <img src="images/site_logo.png" width="313" height="58" alt="">
+            <img src="./assets/images/site_logo.png" width="313" height="58" alt="">
           </a>
           <form class="form-inline" id="global-search">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -88,42 +88,42 @@
         <section class="people-group">
           <div class="card-group">
             <div class="card">
-              <img class="card-img-top" src="images/people_01.png" alt="Saul Goodman">
+              <img class="card-img-top" src="./assets/images/people_01.png" alt="Saul Goodman">
               <div class="card-body">
                 <h4 class="card-title">Saul Goodman</h4>
                 <p class="card-text">法务、财务</p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="images/people_02.png" alt="Gustavo Fring">
+              <img class="card-img-top" src="./assets/images/people_02.png" alt="Gustavo Fring">
               <div class="card-body">
                 <h4 class="card-title">炸鸡先生</h4>
                 <p class="card-text">投资人、企业法人、执行总裁</p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="images/people_03.png" alt="Mike Ehrmantraut">
+              <img class="card-img-top" src="./assets/images/people_03.png" alt="Mike Ehrmantraut">
               <div class="card-body">
                 <h4 class="card-title">麦克</h4>
                 <p class="card-text">安保、销售总监</p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="images/people_04.png" alt="Walter White">
+              <img class="card-img-top" src="./assets/images/people_04.png" alt="Walter White">
               <div class="card-body">
                 <h4 class="card-title">白老师</h4>
                 <p class="card-text">工程师、创始人、研发总监</p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="images/people_05.png" alt="Jesse Pinkman">
+              <img class="card-img-top" src="./assets/images/people_05.png" alt="Jesse Pinkman">
               <div class="card-body">
                 <h4 class="card-title">小粉红</h4>
                 <p class="card-text">工程师助理、联合创始人</p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="images/people_06.png" alt="Skyler White">
+              <img class="card-img-top" src="./assets/images/people_06.png" alt="Skyler White">
               <div class="card-body">
                 <h4 class="card-title">老板娘</h4>
                 <p class="card-text">柜员、销售助理</p>
@@ -134,7 +134,7 @@
         <h2 class="section-title">What We Do</h2>
         <section>
           <p>声动传媒拥有最先进的数字音频工作站及音频编辑系统，采用国际工业标准（192KHz，24Bit）的采样频率进行数字化录音 ,并特别拥有国际公认录音系统PROTOOLS，顶级录音话筒NEUMANN U87,RME800,AVALON737等世界顶级音频设备, 拥有最为保真的还原效果和完美的听觉感受，让配音作品依然鲜活声动，声声入耳，为您提供全方位、一体化的语音解决方案。</p>
-          <p style="text-align:center; padding:2rem;"><img src="images/wedobest.png" alt="do best" /></p>
+          <p style="text-align:center; padding:2rem;"><img src="./assets/images/wedobest.png" alt="do best" /></p>
         </section>
       </div>
     </div>
@@ -166,9 +166,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="assets/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/popper.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
       var wrap = $(window);
       var header = $("#site-header");
