--- a/reb/contact.html
+++ b/reb/contact.html
@@ -8,7 +8,7 @@
     <title>联系我们 - 瑞柏思生物医药</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
@@ -22,7 +22,7 @@
       <header>
         <nav class="navbar navbar-light container" id="logobar">
           <a class="navbar-brand" href="./index.html">
-            <img src="images/site_logo.png" width="313" height="58" alt="">
+            <img src="./assets/images/site_logo.png" width="313" height="58" alt="">
           </a>
           <form class="form-inline" id="global-search">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -84,7 +84,7 @@
           <h3>上海分公司</h3>
           <aside>
             <div class="section-img">
-              <img src="images/map_01.png" alt="map">
+              <img src="./assets/images/map_01.png" alt="map">
             </div>
             <div class="section-text">
               <address>
@@ -100,7 +100,7 @@
           <h3>北京分公司</h3>
           <aside>
             <div class="section-img">
-              <img src="images/map_01.png" alt="map">
+              <img src="./assets/images/map_01.png" alt="map">
             </div>
             <div class="section-text">
               <address>
@@ -142,9 +142,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="assets/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/popper.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
       var wrap = $(window);
       var header = $("#site-header");
