--- a/reb/index.html
+++ b/reb/index.html
@@ -8,7 +8,6 @@
     <title>瑞柏思生物医药 - Home</title>
 
     <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="./assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/style.css">
@@ -23,7 +22,7 @@
       <header>
         <nav class="navbar navbar-light container" id="logobar">
           <a class="navbar-brand" href="./index.html">
-            <img src="images/site_logo.png" width="313" height="58" alt="">
+            <img src="./assets/images/site_logo.png" width="313" height="58" alt="">
           </a>
           <form class="form-inline" id="global-search">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -117,7 +116,7 @@
       <div class="d-flex justify-content-between container" id="products">
         <div class="p-2">
           <div class="card" style="width: auto;">
-            <img class="card-img-top" src="images/product_01.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images/product_01.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">产品名称</h4>
               <p class="card-text">适应症: 作为眼科手术粘弹剂使用</p>
@@ -127,7 +126,7 @@
         </div>
         <div class="p-2">
           <div class="card" style="width: auto;">
-            <img class="card-img-top" src="images/product_02.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images/product_02.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">产品名称</h4>
               <p class="card-text">适应症: 作为眼科手术粘弹剂使用</p>
@@ -137,7 +136,7 @@
         </div>
         <div class="p-2">
           <div class="card" style="width: auto;">
-            <img class="card-img-top" src="images/product_03.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images/product_03.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">产品名称</h4>
               <p class="card-text">适应症: 作为眼科手术粘弹剂使用</p>
