--- a/reb/news.html
+++ b/reb/news.html
@@ -8,7 +8,7 @@
     <title>NEWS - 瑞柏思生物医药</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
@@ -22,7 +22,7 @@
       <header>
         <nav class="navbar navbar-light container" id="logobar">
           <a class="navbar-brand" href="./index.html">
-            <img src="images/site_logo.png" width="313" height="58" alt="">
+            <img src="./assets/images/site_logo.png" width="313" height="58" alt="">
           </a>
           <form class="form-inline" id="global-search">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -81,7 +81,7 @@
             <ul class="list-unstyled news-list">
               <li class="media">
                 <div class="media-img">
-                  <a href="./news/news_item_01.html"><img class="mr-3" src="images/news_pic_thumb_01.jpg" alt="news thumb"></a>
+                  <a href="./news/news_item_01.html"><img class="mr-3" src="./assets/images/news_pic_thumb_01.jpg" alt="news thumb"></a>
                 </div>
                 <div class="media-body">
                   <h5 class="mt-0 mb-1"><a href="./news/news_item_01.html">德国和新西兰大选引发的政治不确定性推高美元</a>asdf</h5>
@@ -91,7 +91,7 @@
               </li>
               <li class="media my-4">
                 <div class="media-img">
-                  <a href="./news/news_item_01.html"><img class="mr-3" src="images/news_pic_thumb_01.jpg" alt="news thumb"></a>
+                  <a href="./news/news_item_01.html"><img class="mr-3" src="./assets/images/news_pic_thumb_01.jpg" alt="news thumb"></a>
                 </div>
                 <div class="media-body">
                   <h5 class="mt-0 mb-1"><a href="./news/news_item_01.html">德国和新西兰大选引发的政治不确定性推高美元</a>asdf</h5>
@@ -101,7 +101,7 @@
               </li>
               <li class="media">
                 <div class="media-img">
-                  <a href="./news/news_item_01.html"><img class="mr-3" src="images/news_pic_thumb_01.jpg" alt="news thumb"></a>
+                  <a href="./news/news_item_01.html"><img class="mr-3" src="./assets/images/news_pic_thumb_01.jpg" alt="news thumb"></a>
                 </div>
                 <div class="media-body">
                   <h5 class="mt-0 mb-1"><a href="./news/news_item_01.html">德国和新西兰大选引发的政治不确定性推高美元</a>asdf</h5>
@@ -111,7 +111,7 @@
               </li>
               <li class="media my-4">
                 <div class="media-img">
-                  <a href="./news/news_item_01.html"><img class="mr-3" src="images/news_pic_thumb_01.jpg" alt="news thumb"></a>
+                  <a href="./news/news_item_01.html"><img class="mr-3" src="./assets/images/news_pic_thumb_01.jpg" alt="news thumb"></a>
                 </div>
                 <div class="media-body">
                   <h5 class="mt-0 mb-1"><a href="./news/news_item_01.html">德国和新西兰大选引发的政治不确定性推高美元</a>asdf</h5>
@@ -121,7 +121,7 @@
               </li>
               <li class="media">
                 <div class="media-img">
-                  <a href="./news/news_item_01.html"><img class="mr-3" src="images/news_pic_thumb_01.jpg" alt="news thumb"></a>
+                  <a href="./news/news_item_01.html"><img class="mr-3" src="./assets/images/news_pic_thumb_01.jpg" alt="news thumb"></a>
                 </div>
                 <div class="media-body">
                   <h5 class="mt-0 mb-1"><a href="./news/news_item_01.html">德国和新西兰大选引发的政治不确定性推高美元</a>asdf</h5>
@@ -131,7 +131,7 @@
               </li>
               <li class="media my-4">
                 <div class="media-img">
-                  <a href="./news/news_item_01.html"><img class="mr-3" src="images/news_pic_thumb_01.jpg" alt="news thumb"></a>
+                  <a href="./news/news_item_01.html"><img class="mr-3" src="./assets/images/news_pic_thumb_01.jpg" alt="news thumb"></a>
                 </div>
                 <div class="media-body">
                   <h5 class="mt-0 mb-1"><a href="./news/news_item_01.html">德国和新西兰大选引发的政治不确定性推高美元</a>asdf</h5>
@@ -141,7 +141,7 @@
               </li>
               <li class="media">
                 <div class="media-img">
-                  <a href="./news/news_item_01.html"><img class="mr-3" src="images/news_pic_thumb_01.jpg" alt="news thumb"></a>
+                  <a href="./news/news_item_01.html"><img class="mr-3" src="./assets/images/news_pic_thumb_01.jpg" alt="news thumb"></a>
                 </div>
                 <div class="media-body">
                   <h5 class="mt-0 mb-1"><a href="./news/news_item_01.html">德国和新西兰大选引发的政治不确定性推高美元</a>asdf</h5>
@@ -186,23 +186,23 @@
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                  <p><a href="#"><img src="images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
+                  <p><a href="#"><img src="./assets/images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
                   <p><a href="#">产品名称</a></p>
                 </li>
                 <li class="list-group-item">
-                  <p><a href="#"><img src="images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
+                  <p><a href="#"><img src="./assets/images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
                   <p><a href="#">产品名称</a></p>
                 </li>
                 <li class="list-group-item">
-                  <p><a href="#"><img src="images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
+                  <p><a href="#"><img src="./assets/images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
                   <p><a href="#">产品名称</a></p>
                 </li>
                 <li class="list-group-item">
-                  <p><a href="#"><img src="images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
+                  <p><a href="#"><img src="./assets/images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
                   <p><a href="#">产品名称</a></p>
                 </li>
                 <li class="list-group-item">
-                  <p><a href="#"><img src="images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
+                  <p><a href="#"><img src="./assets/images/product_pic_thumb_01.jpg" alt="product thumb"></a></p>
                   <p><a href="#">产品名称</a></p>
                 </li>
               </ul>
@@ -239,9 +239,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="assets/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/popper.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
       var wrap = $(window);
       var header = $("#site-header");
