--- a/reb/products.html
+++ b/reb/products.html
@@ -8,7 +8,7 @@
     <title>Products - 瑞柏思生物医药</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
@@ -22,7 +22,7 @@
       <header>
         <nav class="navbar navbar-light container" id="logobar">
           <a class="navbar-brand" href="./index.html">
-            <img src="images/site_logo.png" width="313" height="58" alt="">
+            <img src="./assets/images//site_logo.png" width="313" height="58" alt="">
           </a>
           <form class="form-inline" id="global-search">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -76,21 +76,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="images/product_carousel_01.jpg" alt="First slide">
+              <img class="d-block w-100" src="./assets/images//product_carousel_01.jpg" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Control</h3>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/product_carousel_02.jpg" alt="Second slide">
+              <img class="d-block w-100" src="./assets/images//product_carousel_02.jpg" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
                 <h3>...</h3>
                 <p>...</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/product_carousel_03.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./assets/images//product_carousel_03.jpg" alt="Third slide">
               <div class="carousel-caption d-none d-md-block">
                 <h3>...</h3>
                 <p>...</p>
@@ -114,7 +114,7 @@
         <!-- product list -->
         <div class="card-group">
           <div class="card">
-            <img class="card-img-top" src="images/product_01_thumb.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images//product_01_thumb.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">广普抗菌</h4>
               <p class="card-text">这是一段说明文字，可以简单的介绍一下产品，或者对产品对功用做间断说明，甚或吹嘘一下产品的神力</p>
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/product_02_thumb.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images//product_02_thumb.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">精密仪器</h4>
               <p class="card-text">这是一段说明文字，可以简单的介绍一下产品，或者对产品对功用做间断说明，甚或吹嘘一下产品的神力</p>
@@ -134,7 +134,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/product_03_thumb.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images//product_03_thumb.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">整体设备</h4>
               <p class="card-text">这是一段说明文字，可以简单的介绍一下产品，或者对产品对功用做间断说明，甚或吹嘘一下产品的神力</p>
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/product_04_thumb.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images//product_04_thumb.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">广普抗菌</h4>
               <p class="card-text">这是一段说明文字，可以简单的介绍一下产品，或者对产品对功用做间断说明，甚或吹嘘一下产品的神力</p>
@@ -154,7 +154,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/product_05_thumb.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images//product_05_thumb.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">精密仪器</h4>
               <p class="card-text">这是一段说明文字，可以简单的介绍一下产品，或者对产品对功用做间断说明，甚或吹嘘一下产品的神力</p>
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/product_06_thumb.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images//product_06_thumb.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">整体设备</h4>
               <p class="card-text">这是一段说明文字，可以简单的介绍一下产品，或者对产品对功用做间断说明，甚或吹嘘一下产品的神力</p>
@@ -205,9 +205,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="assets/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/popper.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
       var wrap = $(window);
       var header = $("#site-header");
