copy button and nav-brand link

--- a/cc/index.html
+++ b/cc/index.html
@@ -18,7 +18,7 @@
   <header class="bg-primary">
     <div class="container">
       <nav class="navbar navbar-dark bg-primary" id="site-nav">
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand" href="./">
           <picture>
             <source srcset="./assets/cc-logo.svg" type="image/svg+xml">
             <img src="./assets/cc-logo.png" width="30" height="30" alt="Block-Chain">
@@ -334,7 +334,7 @@
                 <input type="text" class="form-control mb-2" id="linkInput" value="http://www.rebi123.com" readonly="" autofocus="">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-2 btn-clipboard" data-clipboard-target="#linkInput">复制链接</button>
+                <button type="button" class="btn btn-primary mb-2 btn-clipboard" data-clipboard-target="#linkInput">复制链接</button>
               </div>
             </div>
           </form>
