expand top navbar to full width

--- a/yc/index.html
+++ b/yc/index.html
@@ -18,7 +18,7 @@
 
   <header>
     <nav class="navbar bg-dark" id="top-bar">
-      <div class="container">
+      <div class="container-fluid">
         <div class="marquee-price">
           <ul class="price-list">
             <li data-symbol="BTC"><a href="#" target="_blank"> <span class="bc-name">BTC</span> <span class="bc-price">&yen;93003.71</span> <span class="price rise">+4.48%</span> </a></li>
