minor fix and remove old browser detection

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     gtag('config', 'G-2G4NTGT231');
   </script>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
   <title>Profile</title>
   <link rel="stylesheet" href="./assets/style.css" />
-  <!--[if lte IE 7]><script src="./assets/fonts/elegant_font/lte-ie7.js"></script><![endif]-->
+  <!--[if lte IE 7]><script src="./assets/elegant_font/lte-ie7.js"></script><![endif]-->
   <!--[if lte IE 9]><link href="./assets/style-ie.css" rel="stylesheet" type="text/css"><![endif]-->
 </head>
 <body>
@@ -25,40 +25,11 @@
     <ul class="links">
       <li><span class="social_facebook"></span> <a href="http://www.facebook.com/" rel="nofollow">Facebook profile</a><i></i></li>
       <li><span class="social_twitter"></span> <a href="http://www.twitter.com/" rel="nofollow">Twitter tweets</a><i></i></li>
-      <li><span class="social_wordpress"></span> <a href="http://qifei.wordpress.com/" rel="nofollow">WordPress blog</a><i></i></li>
+      <li><span class="social_wordpress"></span> <a href="http://www.wordpress.com/" rel="nofollow">WordPress blog</a><i></i></li>
       <li><span class="icon_camera_alt"></span> <a href="http://www.flickr.com/" rel="nofollow">Flickr photos</a><i></i></li>
       <li><span class="icon_film"></span> <a href="vlog.html" rel="nofollow">Videos</a><i></i></li>
     </ul>
   </div>
   <div id="footer">&copy; 2022 some rights reserved.</div>
-  <div id="updateOldBrowser">
-    <h2>这个浏览器太老了</h2>
-    <p>为了更佳的浏览体验和安全考量，请更新你的浏览器。 <a href="https://www.mozilla.org/en-US/firefox/all/" rel="nofollow" target="_blank" onclick="dismissWarning();">FireFox</a> , <a href="https://www.opera.com/" rel="nofollow" target="_blank" onclick="dismissWarning();">Opera</a> , <a href="https://www.google.com/chrome/" rel="nofollow" target="_blank" onclick="dismissWarning();">Chrome</a> , <a href="https://browser-update.org/zh/update.html?force_outdated=true" rel="nofollow" target="_blank" onclick="dismissWarning();">更多...</a></p>
-  </div>
-  <!-- <script src="./js/bundle.js"></script> -->
-<!-- <script type="text/javascript">
-// browser detect
-if('querySelector' in document && 'localStorage' in window && 'addEventListener' in window) {
-  // you're OK
-} else {
-  //alert('这个浏览器太老了，带你去下个新的');
-  //location.href = 'http://outdatedbrowser.com';
-  document.getElementById('updateOldBrowser').style.display = 'block';
-}
-function dismissWarning() {
-  document.getElementById('updateOldBrowser').style.display='none';
-}
-
-//Google analytics
-
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-1274130-3', 'auto');
-ga('send', 'pageview');
-
-</script> -->
-  </body>
-  </html>
+</body>
+</html>
