update index.html add portfolio page

--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
   <!--[if lte IE 9]><link href="./assets/style-ie.css" rel="stylesheet" type="text/css"><![endif]-->
 </head>
 <body>
-  <div class="box">
-    <div id="shutter"><p class="avatar"><b><img src="./assets/images/photo_small.jpg" alt="photo"></b><i></i></p></div>
-    <div class="notice"><p class="yob">asdf</p><p>Hello you~</p></div>
-    <ul class="links">
-      <li><span class="social_facebook"></span> <a href="http://www.facebook.com/" rel="nofollow">Facebook profile</a><i></i></li>
-      <li><span class="social_twitter"></span> <a href="http://www.twitter.com/" rel="nofollow">Twitter tweets</a><i></i></li>
-      <li><span class="social_wordpress"></span> <a href="http://www.wordpress.com/" rel="nofollow">WordPress blog</a><i></i></li>
-      <li><span class="icon_camera_alt"></span> <a href="http://www.flickr.com/" rel="nofollow">Flickr photos</a><i></i></li>
-      <li><span class="icon_film"></span> <a href="vlog.html" rel="nofollow">Videos</a><i></i></li>
-    </ul>
+  <div class="container">
+    <div class="header"></div>
+    <div class="box">
+      <div id="shutter"><p class="avatar"><b><img src="./assets/images/photo_small.jpg" alt="photo"></b><i></i></p></div>
+      <div class="notice"><p class="yob">asdf</p><p>Hello you~</p></div>
+      <ul class="links">
+        <li><span class="icon_toolbox_alt"></span> <a href="./portfolio.html" rel="nofollow" title="Portfolio">Portfolio</a><i></i></li>
+        <!-- <li><span class="social_facebook"></span> <a href="https://www.facebook.com/" target="_blank" rel="nofollow" title="Facebook">Facebook profile</a><i></i></li>
+        <li><span class="social_twitter"></span> <a href="https://www.twitter.com/" target="_blank" rel="nofollow" title="Tweets">Twitter tweets</a><i></i></li> -->
+        <li><span class="social_wordpress"></span> <a href="https://www.wordpress.com/" target="_blank" rel="nofollow" title="Blog">WordPress blog</a><i></i></li>
+        <li><span class="icon_camera_alt"></span> <a href="https://www.flickr.com/photos/dong/" target="_blank" rel="nofollow" title="Photos">Flickr photos</a><i></i></li>
+        <li><span class="icon_film"></span> <a href="./vlog.html" rel="nofollow" title="Videos">Videos</a><i></i></li>
+      </ul>
+    </div>
+    <div class="footer">&copy; 2025 some rights reserved.</div>
   </div>
-  <div id="footer">&copy; 2025 some rights reserved.</div>
 </body>
 </html>
